refactor: numeric buff ids